--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@ title: Mije
 description: Minimal Jekyll theme
 markdown: kramdown
 highlighter: rouge
-permalink: pretty
+permalink: /:categories/:year/:month/:day/:title/
 collections:
   posts:
     output: true
