--- a/_config.yaml
+++ b/_config.yaml
@@ -1,14 +1,31 @@
 title: Mije
 description: Minimal Jekyll theme
+
 markdown: kramdown
 highlighter: rouge
+theme: minima
+
+plugins:
+  - jekyll-seo-tag
+  - jekyll-feed
+
 permalink: /:categories/:year/:month/:day/:title/
+
 collections:
   posts:
     output: true
+
 defaults:
   - scope:
       path: ""
       type: "posts"
     values:
-      layout: post
+      layout: default
+
+permalink: /:categories/:title/
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - README.md
